--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
             <version>1.7.30</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>hbc-core</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
