--- a/kafka-common/pom.xml
+++ b/kafka-common/pom.xml
@@ -9,27 +9,9 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>basics</artifactId>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>8</source>
-                    <target>8</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+    <artifactId>kafka-common</artifactId>
 
     <dependencies>
-
-        <dependency>
-            <groupId>com.kafkafun</groupId>
-            <artifactId>common</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
 
         <dependency>
             <groupId>org.apache.kafka</groupId>
@@ -44,5 +26,6 @@
         </dependency>
 
     </dependencies>
+
 
 </project>
