--- a/kafka-basics/pom.xml
+++ b/kafka-basics/pom.xml
@@ -9,9 +9,15 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>common</artifactId>
+    <artifactId>kafka-basics</artifactId>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.kafkafun</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.kafka</groupId>
@@ -26,6 +32,5 @@
         </dependency>
 
     </dependencies>
-
 
 </project>
