--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,16 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
     <modules>
-        <module>basics</module>
-        <module>common</module>
-        <module>twitter</module>
+        <module>kafka-basics</module>
+        <module>kafka-common</module>
+        <module>kafka-producer-twitter</module>
+        <module>kafka-consumer-elasticsearch</module>
     </modules>
 
 </project>
