--- a/kafka-common/src/main/resources/consumer.properties
+++ b/kafka-common/src/main/resources/consumer.properties
@@ -3,3 +3,4 @@ auto.offset.reset=earliest
 key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 group.id=application
+topic=first
