--- a/kafka-producer-twitter/src/main/resources/application.properties
+++ b/kafka-producer-twitter/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-consumerKey=<secret>
-consumerSecret=<secret>
-token=<secret>
-secret=<secret>
+consumerKey=${TWITTER_CONSUMER_KEY}
+consumerSecret=${TWITTER_CONSUMER_SECRET}
+token=${TWITTER_TOKEN}
+secret=${TWITTER_SECRET}
 topic=first
