fixed issue with packaging of sibling modules

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <build>
@@ -19,6 +20,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
                 <configuration>
                     <source>8</source>
                     <target>8</target>
@@ -28,10 +30,11 @@
     </build>
 
     <modules>
-        <module>kafka-basics</module>
         <module>kafka-common</module>
+        <module>kafka-basics</module>
         <module>kafka-producer-twitter</module>
         <module>kafka-consumer-elasticsearch</module>
+        <module>kafka-wikipedia-producer</module>
     </modules>
 
 </project>
