--- a/kafka-consumer-elasticsearch/pom.xml
+++ b/kafka-consumer-elasticsearch/pom.xml
@@ -12,16 +12,17 @@
     <artifactId>kafka-consumer-elasticsearch</artifactId>
 
     <dependencies>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>kafka-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.elasticsearch.client</groupId>
             <artifactId>elasticsearch-rest-high-level-client</artifactId>
             <version>7.2.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.kafkafun</groupId>
-            <artifactId>common</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
