--- a/kafka-producer-twitter/pom.xml
+++ b/kafka-producer-twitter/pom.xml
@@ -14,9 +14,9 @@
     <dependencies>
 
         <dependency>
-            <groupId>com.kafkafun</groupId>
-            <artifactId>common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>kafka-common</artifactId>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
