Kafka to ElasticSearch Consumer

--- a/kafka-consumer-elasticsearch/src/main/resources/application.properties
+++ b/kafka-consumer-elasticsearch/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 elasticsearch_hostname=${ELASTICSEARCH_HOSTNAME}
 elasticsearch_username=${ELASTICSEARCH_USERNAME}
 elasticsearch_password=${ELASTICSEARCH_PASSWORD}
+elasticsearch_index=wikipedia
+topic=wikipedia
