--- a/kafka-consumer-elasticsearch/src/main/resources/consumer.properties
+++ b/kafka-consumer-elasticsearch/src/main/resources/consumer.properties
@@ -2,4 +2,4 @@ bootstrap.servers=127.0.0.1:9092
 auto.offset.reset=earliest
 key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-group.id=application
+group.id=kafka-demo-elasticsearch
