--- a/kafka-consumer-elasticsearch/src/main/resources/consumer.properties
+++ b/kafka-consumer-elasticsearch/src/main/resources/consumer.properties
@@ -3,3 +3,4 @@ auto.offset.reset=earliest
 key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 group.id=kafka-demo-elasticsearch
+enable.auto.commit=false
