--- a/pom.xml
+++ b/pom.xml
@@ -32,9 +32,10 @@
     <modules>
         <module>kafka-common</module>
         <module>kafka-basics</module>
-        <module>kafka-producer-twitter</module>
+        <module>kafka-twitter-producer</module>
         <module>kafka-consumer-elasticsearch</module>
         <module>kafka-wikipedia-producer</module>
+        <module>kakfa-streams-filter-wikipedia</module>
     </modules>
 
 </project>
